<resources>
    <string name="app_name">Grid Application</string>
    <string name="ig">Instagram</string>
    <string name="tt">Twitter</string>
    <string name="fb">Facebook</string>
    <string name="wa">Whatsapp</string>
    <string name="gh">GitHub</string>
    <string name="so">StackOverflow</string>
    <string name="lofo">Log In Form</string>
    <string name="lgn">LOGIN</string>
    <string name="cnc">CANCEL</string>
    <string name="jng">Nama :</string>
    <string name="nampan">Long name :</string>
    <string name="saya">Ahmad Dwi Sovana</string>
    <string name="txtNIM">NIM :</string>
    <string name="strNIM">17112362</string>
    <string name="txtEmail">e-mail :</string>
    <string name="strEmail">dwi.hyuga@gmail.com</string>
</resources>
