<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/gua"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/sarimin" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1">

        <TableRow>

            <ImageButton
                android:id="@+id/insta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/instagram" />

            <ImageButton
                android:id="@+id/tuwiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tuwiter" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ig"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tt"
                android:gravity="center"/>
        </TableRow>
        <TableRow>
            <ImageButton
                android:id="@+id/fesbuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/fesbuk" />

            <ImageButton
                android:id="@+id/watsap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/watsap" />

        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fb"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wa"
                android:gravity="center"/>
        </TableRow>
        <TableRow>

            <ImageButton
                android:id="@+id/git"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/octocat" />

            <ImageButton
                android:id="@+id/setak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/setak" />

        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gh"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/so"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>
</LinearLayout>