<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/lofo" />

    <EditText
        android:id="@+id/usrnm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usrnm"
        android:layout_alignStart="@+id/usrnm"
        android:layout_marginStart="0dp"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:text="@string/lgn" />

    <Button
        android:id="@+id/btnCnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLog"
        android:layout_alignStart="@+id/btnLog"
        android:layout_marginStart="0dp"
        android:layout_marginTop="42dp"
        android:text="@string/cnc" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCnc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="" />
</RelativeLayout>